--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
+    "cookie": "^1.0.2",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "next": "16.0.1",
